# python-weekend-frontend-2021

./: Makefile  package.json
mock-backend/: Makefile  app.py  pyproject.toml
src/: App.css  App.tsx  FormControlWhisperer.tsx  Lizard.tsx  Offer.tsx  Offers.tsx  SearchForm.tsx  SearchResponseModelDecoder.ts  Settings.tsx  Snowflakes.tsx  Tree.css  WhisperList.tsx  api.ts  index.tsx  models.ts  react-snowflakes.d.ts
