[tool.poetry]
name = "mock-backend"
version = "0.1.0"
description = ""
authors = ["milan.suk <milan.suk@kiwi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
